Fixed table not overflowing correctly. Fixed header inputs not overflowing correctly.

--- a/frontend/src/app/table/table.component.scss
+++ b/frontend/src/app/table/table.component.scss
@@ -1,6 +1,6 @@
 #headerContainer {
     display:flex;
-    justify-content: center;
+    justify-content: safe center;
     align-items: center;
     gap:50px;
     overflow: auto;
